<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.mortbay.jetty.perf</groupId>
  <artifactId>jetty-perf</artifactId>
  <version>12.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Jetty :: Performance test suite</name>
  <url>https://github.com/jetty-project/jetty-perf</url>
  <description>
    The Jetty performance test suite
  </description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <!-- Do not fail the build if a test name that only exists in a single module was specified. -->
    <surefire.failIfNoSpecifiedTests>false</surefire.failIfNoSpecifiedTests>

<!--
    <cometd.version>8.0.0-SNAPSHOT</cometd.version>
-->

    <!-- The following props are overridden by the jenkins pipeline, see Jenkinsfile. -->
    <jetty.version>12.0.2-SNAPSHOT</jetty.version>
    <jetty-load-generator.version>4.0.0</jetty-load-generator.version>
    <test.jdk.name>load-jdk17</test.jdk.name>
  </properties>

  <modules>
    <module>common</module>
    <module>core</module>
    <module>ee9</module>
    <module>ee10</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.mortbay.jetty.perf</groupId>
        <artifactId>jetty-perf-common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-server</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty.http2</groupId>
        <artifactId>jetty-http2-server</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-jmx</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty.ee9</groupId>
        <artifactId>jetty-ee9-webapp</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty.ee10</groupId>
        <artifactId>jetty-ee10-webapp</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <!--
            <dependency>
              <groupId>org.cometd.java</groupId>
              <artifactId>cometd-java-benchmark-client</artifactId>
              <version>${cometd.version}</version>
              <exclusions>
                <exclusion>
                  <groupId>org.apache.logging.log4j</groupId>
                  <artifactId>log4j-core</artifactId>
                </exclusion>
                <exclusion>
                  <groupId>org.apache.logging.log4j</groupId>
                  <artifactId>log4j-slf4j2-impl</artifactId>
                </exclusion>
              </exclusions>
            </dependency>
            <dependency>
              <groupId>org.cometd.java</groupId>
              <artifactId>cometd-java-benchmark-server</artifactId>
              <version>${cometd.version}</version>
              <exclusions>
                <exclusion>
                  <groupId>org.apache.logging.log4j</groupId>
                  <artifactId>log4j-core</artifactId>
                </exclusion>
                <exclusion>
                  <groupId>org.apache.logging.log4j</groupId>
                  <artifactId>log4j-slf4j2-impl</artifactId>
                </exclusion>
              </exclusions>
            </dependency>
      -->
      <dependency>
        <groupId>org.mortbay.jetty.orchestrator</groupId>
        <artifactId>jetty-cluster-orchestrator</artifactId>
        <version>1.1.0</version>
      </dependency>

      <!-- Exclude then explicitly depend on jetty-load-generator deps to make sure we use the right jetty version -->
      <dependency>
        <groupId>org.mortbay.jetty.loadgenerator</groupId>
        <artifactId>jetty-load-generator-client</artifactId>
        <version>${jetty-load-generator.version}</version>
        <exclusions>
          <exclusion>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-client</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.eclipse.jetty.http2</groupId>
            <artifactId>jetty-http2-client-transport</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-alpn-java-client</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-util-ajax</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-client</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty.http2</groupId>
        <artifactId>jetty-http2-client-transport</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-alpn-java-client</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-util-ajax</artifactId>
        <version>${jetty.version}</version>
      </dependency>

      <dependency>
        <groupId>org.hdrhistogram</groupId>
        <artifactId>HdrHistogram</artifactId>
        <version>2.1.12</version>
      </dependency>
      <dependency>
        <groupId>org.kamranzafar</groupId>
        <artifactId>jtar</artifactId>
        <version>2.3</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.4.8</version>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>5.9.3</version>
      </dependency>
      <dependency>
        <groupId>org.hamcrest</groupId>
        <artifactId>hamcrest</artifactId>
        <version>2.2</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.1.2</version>
          <configuration>
            <forkedProcessTimeoutInSeconds>3600</forkedProcessTimeoutInSeconds>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <repositories>
    <repository>
      <id>jetty.snapshot</id>
      <url>https://oss.sonatype.org/content/repositories/jetty-snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>jetty.staging</id>
      <url>https://oss.sonatype.org/content/groups/jetty-with-staging</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>

</project>
